Modified the description meta value

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="author" content="David LS(RUCU)">
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2">
-	<meta name="description" content="Get informed by the latest information on COVID19 pandemic. Such as overview on cases, how to prevent the spread, how to protect loved ones from the deadly virus, what to do when you suspect others or yourself having the virus and so on. Together we can fight off the deadly virus.">
+	<meta name="description" content="Get informed of the latest information on COVID19 pandemic. Such as overview on cases, how to prevent the spread, how to protect loved ones from the deadly virus, what to do when you suspect others or yourself having the virus and so on. Together we can fight off the deadly virus.">
 </head>
 <body>
 	<header class="flex_middle theme_bg">
