Enclosed the case numbers into a section element

--- a/index.html
+++ b/index.html
@@ -23,32 +23,34 @@
 	</header>
 	<select id="select_country" onchange="statsAsyncTask(this.value)" class="full_w"></select>
 	<main>
-		<div class="case_container">
-			<span id="total_confirmed_number">...</span>
-			<span>Maambukizi</span>
-		</div>
-		<div class="case_container">
-			<span id="new_confirmed_number">...</span>
-			<span>Maambukizi mapya</span>
-		</div>
+		<section class="case_numbers">
+			<div class="case_container">
+				<span id="total_confirmed_number">...</span>
+				<span>Maambukizi</span>
+			</div>
+			<div class="case_container">
+				<span id="new_confirmed_number">...</span>
+				<span>Maambukizi mapya</span>
+			</div>
 
-		<div class="case_container">
-			<span id="total_deaths_number">...</span>
-			<span>Vifo</span>
-		</div>
-		<div class="case_container">
-			<span id="new_deaths_number">...</span>
-			<span>Vifo vipya</span>
-		</div>
+			<div class="case_container">
+				<span id="total_deaths_number">...</span>
+				<span>Vifo</span>
+			</div>
+			<div class="case_container">
+				<span id="new_deaths_number">...</span>
+				<span>Vifo vipya</span>
+			</div>
 
-		<div class="case_container">
-			<span id="total_reccovered_number">...</span>
-			<span>Waliopona</span>
-		</div>
-		<div class="case_container">
-			<span id="new_reccovered_number">...</span>
-			<span>Waliopona wapya</span>
-		</div>
+			<div class="case_container">
+				<span id="total_reccovered_number">...</span>
+				<span>Waliopona</span>
+			</div>
+			<div class="case_container">
+				<span id="new_reccovered_number">...</span>
+				<span>Waliopona wapya</span>
+			</div>
+		</section>
 	</main>
 </body>
 <script src="js/base.js"></script>
