Added last updated info

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 				<span id="new_reccovered_number">...</span>
 				<span>Waliopona wapya</span>
 			</div>
+			<div class="case_container">
+				<span id="last_updated_number">...</span>
+				<span>Last Updated</span>
+			</div>
 		</section>
 
 		<!-- news section -->
