--- a/index2.html
+++ b/index2.html
@@ -29,6 +29,7 @@
 	<header class="flex_middle theme_bg">
 		<div class="app_icon"><img src="img/icons/icon_256.png" alt="corona virus icon" class="full_dims"></div>
 	</header>
+	<select id="select_country" onchange="statsAsyncTask(this.value)" class="full_w"></select>
 	<main>
 		<!-- numbers section -->
 		<section class="case_numbers">
