--- a/index2.html
+++ b/index2.html
@@ -67,11 +67,12 @@
 
 		<!-- news section -->
 		<section class="news_sect">
+			<span class="section_title">LATTEST NEWS</span>
 			<!-- first new -->
 			<div class="a_new">
 				<div class=" new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
@@ -80,7 +81,7 @@
 			<div class="a_new">
 				<div class=" new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
@@ -88,7 +89,7 @@
 			<div class="a_new">
 				<div class=" new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
@@ -96,7 +97,7 @@
 			<div class="a_new">
 				<div class=" new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
@@ -104,7 +105,7 @@
 			<div class="a_new">
 				<div class=" new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
@@ -112,7 +113,7 @@
 			<div class="a_new">
 				<div class=" new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
@@ -127,7 +128,7 @@
 	window.onload = () => {
 		countriesAsyncTask()
 		statsAsyncTask('TZ')
-		// newsAsyncTask('global')
+		newsAsyncTask('global')
 	}
 </script>
 </html>
