--- a/index2.html
+++ b/index2.html
@@ -66,57 +66,9 @@
 		</section>
 
 		<!-- news section -->
-		<section class="news_sect">
+		<section class="news_sect" id="news_sect">
 			<span class="section_title">LATTEST NEWS</span>
-			<!-- first new -->
-			<div class="a_new">
-				<div class=" new_body">
-					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
-				</div>
-				<a href=""><button class="pointer text_capitalize">Read more</button></a>
-			</div>
-
-			<!-- TODO: remove this -->
-			<div class="a_new">
-				<div class=" new_body">
-					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
-				</div>
-				<a href=""><button class="pointer text_capitalize">Read more</button></a>
-			</div>
-			<!-- TODO: remove this -->
-			<div class="a_new">
-				<div class=" new_body">
-					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
-				</div>
-				<a href=""><button class="pointer text_capitalize">Read more</button></a>
-			</div>
-			<!-- TODO: remove this -->
-			<div class="a_new">
-				<div class=" new_body">
-					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
-				</div>
-				<a href=""><button class="pointer text_capitalize">Read more</button></a>
-			</div>
-			<!-- TODO: remove this -->
-			<div class="a_new">
-				<div class=" new_body">
-					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
-				</div>
-				<a href=""><button class="pointer text_capitalize">Read more</button></a>
-			</div>
-			<!-- TODO: remove this -->
-			<div class="a_new">
-				<div class=" new_body">
-					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
-				</div>
-				<a href=""><button class="pointer text_capitalize">Read more</button></a>
-			</div>
+			<!-- news will be updated -->
 		</section>
 	</main>
 </body>
