--- a/test.html
+++ b/test.html
@@ -29,54 +29,91 @@
 	<header class="flex_middle theme_bg">
 		<div class="app_icon"><img src="img/icons/icon_256.png" alt="corona virus icon" class="full_dims"></div>
 	</header>
+	<select id="select_country" onchange="statsAsyncTask(this.value)" class="full_w"></select>
 	<main>
-		<section class="news_sect">
+		<!-- numbers section -->
+		<section class="case_numbers">
+			<div class="case_container">
+				<span id="total_confirmed_number">...</span>
+				<span>Maambukizi</span>
+			</div>
+			<div class="case_container">
+				<span id="new_confirmed_number">...</span>
+				<span>Maambukizi mapya</span>
+			</div>
+
+			<div class="case_container">
+				<span id="total_deaths_number">...</span>
+				<span>Vifo</span>
+			</div>
+			<div class="case_container">
+				<span id="new_deaths_number">...</span>
+				<span>Vifo vipya</span>
+			</div>
+
+			<div class="case_container">
+				<span id="total_reccovered_number">...</span>
+				<span>Waliopona</span>
+			</div>
+			<div class="case_container">
+				<span id="new_reccovered_number">...</span>
+				<span>Waliopona wapya</span>
+			</div>
+			<div class="case_container">
+				<span id="last_updated_number">...</span>
+				<span>Last Updated</span>
+			</div>
+		</section>
+
+		<!-- news section -->
+		<section class="news_sect" id="news_sect">
+			<span class="section_title">LATTEST NEWS</span>
 			<!-- first new -->
 			<div class="a_new">
-				<div class=" new_body">
+				<div class="new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
 
 			<!-- TODO: remove this -->
 			<div class="a_new">
-				<div class=" new_body">
+				<div class="new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
 			<!-- TODO: remove this -->
 			<div class="a_new">
-				<div class=" new_body">
+				<div class="new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
 			<!-- TODO: remove this -->
 			<div class="a_new">
-				<div class=" new_body">
+				<div class="new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
 			<!-- TODO: remove this -->
 			<div class="a_new">
-				<div class=" new_body">
+				<div class="new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
 			<!-- TODO: remove this -->
 			<div class="a_new">
-				<div class=" new_body">
+				<div class="new_body">
 					<span class="new_title text_uppercase">WHO announces COVID-19 outbreak a pandemic</span>
-					<p class="new_excert">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
+					<p class="new_excerpt">Today, as WHO/Europe’s Standing Committee of the Regional Committee met, Dr Hans Henri P. Kluge, WHO Regional Director for Europe, briefed the group on the rapid escalation of COVID-19 in the WHO European Region, now placing it at the centre of this pandemic.</p>
 				</div>
 				<a href=""><button class="pointer text_capitalize">Read more</button></a>
 			</div>
@@ -89,9 +126,9 @@
 <script>
 	// execute some callbacks (statsAsyncTask('TZ') & newsAsyncTask('global')) when the page loads
 	window.onload = () => {
-		// countriesAsyncTask()
-		// statsAsyncTask('TZ')
-		// newsAsyncTask('global')
+		countriesAsyncTask()
+		statsAsyncTask('TZ')
+		newsAsyncTask('global')
 	}
 </script>
 </html>
