--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -67,12 +66,12 @@
 	</main>
 </body>
 <script defer src="js/base.js"></script>
-<script defer src="js/async_task.js"></script>
+<script defer src="js/AsyncTask.js"></script>
 <script defer src="sw.js"></script>
 <script>
 	window.onload = () => {
-		loadCountries()
-		loadStats('TZ')
+		loadCountries();
+		loadStats('TZ');
 	};
 
 	// loadCountries()
@@ -89,15 +88,15 @@
 				const countries = data.countries;
 				for(i in countries) {
 					// create new 'option' element, then add 'value' and 'text' attributes to it
-					const country_options = document.createElement('option')
-					country_options.value = countries[i].iso2
-					country_options.text = countries[i].name
+					const country_options = document.createElement('option');
+					country_options.value = countries[i].iso2;
+					country_options.text = countries[i].name;
 
 					// pre select tanzania option
-					getNode('#select_country').value = 'TZ'
+					getNode('#select_country').value = 'TZ';
 
 					// append the #country_options into #select_country
-					getNode('#select_country').appendChild(country_options)
+					getNode('#select_country').appendChild(country_options);
 				}
 			} else {
 				// error occured
@@ -111,18 +110,18 @@
 
 	// loadStats()
 	function loadStats (location) {
-		getNode('#total_confirmed_number').innerText=`...`
-		getNode('#new_confirmed_number').innerText=`...`
-		getNode('#total_reccovered_number').innerText=`...`
-		getNode('#new_reccovered_number').innerText=`...`
-		getNode('#total_deaths_number').innerText=`...`
-		getNode('#new_deaths_number').innerText=`...`
-		getNode('#last_updated_number').innerText=`...`
+		getNode('#total_confirmed_number').innerText=`...`;
+		getNode('#new_confirmed_number').innerText=`...`;
+		getNode('#total_reccovered_number').innerText=`...`;
+		getNode('#new_reccovered_number').innerText=`...`;
+		getNode('#total_deaths_number').innerText=`...`;
+		getNode('#new_deaths_number').innerText=`...`;
+		getNode('#last_updated_number').innerText=`...`;
 		const task = new AsyncTask({
 			'url': `https://api.smartable.ai/coronavirus/stats/${location}`,
 			'method': `get`,
 			'headers': {
-				'Cache-Control': 'no-cache',
+				'Cache-Control': `no-cache`,
 				'Subscription-Key': `b0aaacac86f44d898bf1b2df828f61dc`
 			}
 		});
@@ -135,36 +134,36 @@
 				const updatedDateTime = new Date(data.updatedDateTime);
 				const FORMATED_DATE_TIME = updatedDateTime.getFullYear()+'-'+preppendZero((updatedDateTime.getMonth()+1))+'-'+preppendZero(updatedDateTime.getDate())+' '+preppendZero(updatedDateTime.getHours())+':'+preppendZero(updatedDateTime.getMinutes())+':'+preppendZero(updatedDateTime.getSeconds());
 
-				getNode('#total_confirmed_number').innerText=data.stats.totalConfirmedCases
-				getNode('#new_confirmed_number').innerText=data.stats.newlyConfirmedCases
-				getNode('#total_reccovered_number').innerText=data.stats.totalRecoveredCases
-				getNode('#new_reccovered_number').innerText=data.stats.newlyRecoveredCases
-				getNode('#total_deaths_number').innerText=data.stats.totalDeaths
-				getNode('#new_deaths_number').innerText=data.stats.newDeaths
-				getNode('#last_updated_number').innerText=FORMATED_DATE_TIME
+				getNode('#total_confirmed_number').innerText=data.stats.totalConfirmedCases;
+				getNode('#new_confirmed_number').innerText=data.stats.newlyConfirmedCases;
+				getNode('#total_reccovered_number').innerText=data.stats.totalRecoveredCases;
+				getNode('#new_reccovered_number').innerText=data.stats.newlyRecoveredCases;
+				getNode('#total_deaths_number').innerText=data.stats.totalDeaths;
+				getNode('#new_deaths_number').innerText=data.stats.newDeaths;
+				getNode('#last_updated_number').innerText=FORMATED_DATE_TIME;
 			} else {
 				// error occured
 				console.log(response);
 
-				getNode('#total_confirmed_number').innerText=`-`
-				getNode('#new_confirmed_number').innerText=`-`
-				getNode('#total_reccovered_number').innerText=`-`
-				getNode('#new_reccovered_number').innerText=`-`
-				getNode('#total_deaths_number').innerText=`-`
-				getNode('#new_deaths_number').innerText=`-`
-				getNode('#last_updated_number').innerText=`-`
+				getNode('#total_confirmed_number').innerText=`-`;
+				getNode('#new_confirmed_number').innerText=`-`;
+				getNode('#total_reccovered_number').innerText=`-`;
+				getNode('#new_reccovered_number').innerText=`-`;
+				getNode('#total_deaths_number').innerText=`-`;
+				getNode('#new_deaths_number').innerText=`-`;
+				getNode('#last_updated_number').innerText=`-`;
 			}
 		}).catch(error=>{
 			// error occured
 			console.log(error);
 
-			getNode('#total_confirmed_number').innerText=`-`
-			getNode('#new_confirmed_number').innerText=`-`
-			getNode('#total_reccovered_number').innerText=`-`
-			getNode('#new_reccovered_number').innerText=`-`
-			getNode('#total_deaths_number').innerText=`-`
-			getNode('#new_deaths_number').innerText=`-`
-			getNode('#last_updated_number').innerText=`-`
+			getNode('#total_confirmed_number').innerText=`-`;
+			getNode('#new_confirmed_number').innerText=`-`;
+			getNode('#total_reccovered_number').innerText=`-`;
+			getNode('#new_reccovered_number').innerText=`-`;
+			getNode('#total_deaths_number').innerText=`-`;
+			getNode('#new_deaths_number').innerText=`-`;
+			getNode('#last_updated_number').innerText=`-`;
 		});
 	}
 </script>
