--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			method: `get`,
 			headers: {
 				'Cache-Control': `no-cache`,
-				'Subscription-Key': `b0aaacac86f44d898bf1b2df828f61dc`
+				'Subscription-Key': `API_KEY`
 			}
 		});
 
